<resources>
    <string name="app_name">bikedeboa</string>
    <string name="title_activity_maps">Map</string>
    <string name="how_to_get_there">Como chegar</string>
    <string name="rate">Avaliar</string>
    <string name="suggest_change">Sugerir Mudança</string>
    <string name="public_rack">Público</string>
    <string name="private_rack">Restrito</string>
    <string name="uinvertido">Bicicletário U Invertido</string>
    <string name="deroda">Bicicletário de Roda</string>
    <string name="trave">Bicicletário Trave</string>
    <string name="suspenso">Bicicletário Suspenso</string>
    <string name="grade">Bicicletário de Grade</string>
    <string name="outro">Outro</string>
    <string name="rate_this_rack">Dê sua nota</string>
    <string name="more_info">Mais informações</string>
    <string name="autocomplete_hint">Buscar endereço, estabelecimento, …</string>
    <string name="about">Sobre o projeto</string>
    <string name="faq">Perguntas frequentes</string>
    <string name="login_collaborator">Login colaborador</string>
    <string name="app_settings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="rationale">O Bike de Boa não vai funcionar corretamente sem as permissões necessárias. Vai nas configurações do aplicativo pra mudar isso</string>
    <string name="title_rationale">Permissões necessárias</string>
    <string name="location_rationale">O Bike de Boa precisa da sua permissão para acessar a localização do celular</string>
    <plurals name="n_ratings">
        <item quantity="one">%d avaliação </item>
        <item quantity="other">%d avaliações</item>
    </plurals>

    <!-- bottom bar lib constants -  I don't want to leave this here -->
    <string name="BackDropBottomSheetBehavior">com.libs.custombottomsheetbehavior.lib.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.libs.custombottomsheetbehavior.lib.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.libs.custombottomsheetbehavior.lib.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.libs.custombottomsheetbehavior.lib.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.libs.custombottomsheetbehavior.lib.ScrollingAppBarLayoutBehavior</string>

</resources>
